# master_thesis

./: .gitignore
graphtutorial/: agent.py  graph.py  langgraph.json  main.py  pyproject.toml
graphtutorial/agents/: activity_stream.py  agent_utils.py  benchmark_agent.py  cis_benchmark_agent.py  config_agent.py  exampe_2.txt  example.txt  interdepedency_agent.py  main.py  password_policy.txt  policy_agent.py  preprocessing_at_startup.py  prompts.py  rich_renderer.py  search_agent.py  supervisor_agent.py  visualization.py
graphtutorial/agents/run/: catalog_interdependencies.json  cis_benchmark_agent_result.md  final_result.md  interdependency_agent_result.md  policy_agent_result.md  policy_requirements.json  requirements_analysis_tenant.json  requirements_compliance_analysis.json  requirements_vs_benchmark.json  search_agent_result.md  search_agent_results.json  security_policy.txt  tenant_configs_vs_benchmark.json
graphtutorial/intune_configurations/: configuration_categories.json
graphtutorial/intune_configurations/chroma_db/190bbd36-b2e4-4cfa-9144-cb82825a8ffa/: index_metadata.pickle
